--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -183,7 +183,7 @@ a {
   &:hover,
   &:focus,
   &:active {
-    color: $color6;
+    color: $color10;
   }
 }
 
@@ -298,14 +298,10 @@ a {
 .menu {
   display: flex;
   align-items: flex-start;
-  //min-width: $breakpoint1;
-  //max-width: 100vw;
   margin: 0;
   margin-right: auto;
   margin-left: auto;
   padding: 0;
-
-  border-left: 2px solid $color8;
 }
 
 .menu--fixed {
@@ -329,6 +325,7 @@ a {
   flex-wrap: wrap;
   width: 100%;
   margin: 0;
+  margin-top: 10px;
   padding: 0;
 
   list-style: none;
@@ -374,7 +371,7 @@ a {
   font-weight: 700;
 
   & a {
-    color: $color6;
+    color: $color7;
   }
 }
 
@@ -489,7 +486,7 @@ a {
   };
   &:hover,
   &:focus {
-    border-left-color: $color6;
+    border-left-color: $color10;
   }
   & a {
     display: block;
@@ -503,7 +500,7 @@ a {
 .departments__item--active {
   border-left: 4px solid $color7;
   & a {
-    color: $color6;
+    color: $color7;
 
     border-bottom: none;
   }
@@ -839,12 +836,11 @@ a {
 // =========================================================================
 
 .popup {
-  position: relative;
   position: fixed;
-  top: 0;
+  bottom: 0;
 
   width: 230px;
-  height: 100%;
+  height: calc(100vh - 10px);
   margin-top: 10px;
   overflow: auto;
 }
