--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -626,6 +626,20 @@ a {
   margin: 0;
   padding: 0;
   padding: 5px;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-image: url("../img/santa-hat.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    transform: rotate(30deg);
+  }
 }
 
 .person__surname {
