--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1,931 +1,21 @@
-// Imports
-// =========================================================================
-@import "normalize/normalize";
-
-//Font-face
-// =========================================================================
-
-@font-face {
-  font-weight: 400;
-  font-family: "Montserrat";
-  font-style: normal;
-
-  src: url("../fonts/subset-Montserrat-Regular.woff2") format("woff2"),
-  url("../fonts/subset-Montserrat-Regular.woff") format("woff");
-}
-
-@font-face {
-  font-weight: 900;
-  font-family: "Montserrat";
-  font-style: normal;
-
-  src: url("../fonts/subset-Montserrat-Black.woff2") format("woff2"),
-  url("../fonts/subset-Montserrat-Black.woff") format("woff");
-}
-
-@font-face {
-  font-weight: 700;
-  font-family: "Montserrat";
-  font-style: normal;
-
-  src: url("../fonts/subset-Montserrat-Bold.woff2") format("woff2"),
-  url("../fonts/subset-Montserrat-Bold.woff") format("woff");
-}
-
-// Fonts
-// =========================================================================
-
-$montserrat: "Montserrat", Arial, serif;
-
-// Colors
-// =========================================================================
-
-$white: #ffffff;
-$black: #000000;
-//https://artsexperiments.withgoogle.com/artpalette/colors/94919c-cbc7c8-f9ebdd-36346c-55505e
-$color1: #55505e;
-$color2: #556270;
-$color3: #faf4ff;
-$color4: #cbc7c8;
-$color5: #94919c;
-$color6: #8a6267;
-$color7: #7a110d;
-$color8: #e0f8ff;
-$color9: #495a42;
-$color10: #0055cc;
-$color11: #976080;
-
-// Breakpoints
-// =========================================================================
-
-$breakpoint1: 1190px;
-$breakpoint2: 1420px;
-$breakpoint3: 1650px;
-$breakpoint4: 1880px;
-
-@mixin respond-to($media) {
-  @if $media == break0 {
-    @media only screen and (max-width: $breakpoint1) {
-      @content;
-    }
-  } @else if $media == break1 {
-    @media only screen and (min-width: $breakpoint1 + 1) and (max-width: $breakpoint2 - 1) {
-      @content;
-    }
-  } @else if $media == break2 {
-    @media only screen and (min-width: $breakpoint2 + 1) and (max-width: $breakpoint3 - 1) {
-      @content;
-    }
-  } @else if $media == break3 {
-    @media only screen and (min-width: $breakpoint3 + 1) and (max-width: $breakpoint4 - 1) {
-      @content;
-    }
-  } @else if $media == break4 {
-    @media only screen and (min-width: $breakpoint4) {
-      @content;
-    }
-  }
-}
-
-// Animations
-// =========================================================================
-
-@keyframes popupSlideIn {
-  0% {
-    transform: translateX(240px);
-  }
-  100% {
-    transform: translateX(0px);
-  }
-}
-
-@keyframes popupSlideOut {
-  0% {
-    transform: translateX(0px);
-  }
-  100% {
-    transform: translateX(240px);
-  }
-}
-
-@keyframes shake {
-  10%,
-  90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-
-  20%,
-  80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%,
-  50%,
-  70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%,
-  60% {
-    transform: translate3d(4px, 0, 0);
-  }
-}
-
-// Global styles
-// =========================================================================
-
-html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-*,
-*::after,
-*::before {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-* {
-  &::-webkit-scrollbar {
-    width: 12px;
-
-    background-color: $white;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: $white;
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba($black, 0.3);
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: $color1;
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba($black, 0.3);
-  }
-}
-
-img {
-  max-width: 100%;
-}
-
-a {
-  color: $color9;
-  text-decoration: none;
-
-  transition: all 0.3s ease-in-out;
-
-  &:hover,
-  &:focus,
-  &:active {
-    color: $color10;
-  }
-}
-
-// Basic
-// =========================================================================
-
-.visually-hidden:not(:focus):not(:active) {
-  position: absolute;
-
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-
-  white-space: nowrap;
-
-  border: 0;
-
-  clip: rect(0 0 0 0);
-  clip-path: inset(100%);
-}
-
-.container {
-  max-width: $breakpoint1;
-  margin: 0 auto;
-  padding-right: 20px;
-  padding-left: 20px;
-  @include respond-to (break2) {
-    max-width: $breakpoint2;
-  }
-;
-  @include respond-to (break3) {
-    max-width: $breakpoint3;
-  }
-;
-  @include respond-to (break4) {
-    max-width: $breakpoint4;
-  }
-;
-  @include respond-to (break4) {
-    max-width: $breakpoint4;
-  }
-;
-}
-
-.body {
-  min-width: $breakpoint1;
-
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  font-family: $montserrat;
-  color: $color1;
-
-  background-color: $white;
-
-  scroll-behavior: smooth;
-
-  &--popup {
-    width: 230px;
-    min-width: 210px;
-    padding: 10px;
-    padding-bottom: 0;
-
-    color: $color3;
-
-    background-color: $color2;
-  }
-}
-
-
-// Header
-// =========================================================================
-
-.header {
-  min-height: 80px;
-  margin-bottom: 40px;
-  margin-left: 230px;
-
-  transition: margin-right 1s linear;
-
-  @include respond-to (break4) {
-    margin-left: 460px;
-  }
-;
-
-  &--shrinked {
-    margin-right: 230px;
-  }
-}
-
-.header__logo {
-  align-self: flex-start;
-  max-width: 155px;
-  height: auto;
-  margin-right: 50px;
-}
-
-.header__heading {
-  align-self: flex-end;
-  margin-top: 30px;
-  margin-right: auto;
-  margin-bottom: 15px;
-  margin-left: auto;
-  padding: 0;
-
-  font-weight: 900;
-  font-size: 30px;
-  line-height: 42px;
-  vertical-align: bottom;
-  text-align: center;
-  color: $color1;
-  text-transform: uppercase;
-  font-style: normal;
-  letter-spacing: 1px;
-  text-shadow: 2px 2px 4px rgba($color1, 0.5);
-}
-
-// Menu list
-// =========================================================================
-
-.menu {
-  display: flex;
-  align-items: flex-start;
-  margin: 0;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 0;
-}
-
-.menu--fixed {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
-
-  padding-top: 10px;
-  padding-left: 20px;
-
-  background-color: $white;
-  border-bottom: 1px solid $color8;
-  border-left: none;
-}
-
-.menu__list {
-  display: flex;
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-wrap: wrap;
-  width: 100%;
-  margin: 0;
-  margin-top: 10px;
-  padding: 0;
-
-  list-style: none;
-}
-
-.menu--fixed .menu__list {
-  max-width: calc(100% - 250px);
-}
-
-.menu__item {
-  min-width: 90px;
-  max-width: 100%;
-  margin: 0;
-  margin-right: 10px;
-  margin-bottom: 5px;
-  padding: 0;
-  padding-left: 5px;
-
-  font-size: 12px;
-  line-height: 16px;
-  vertical-align: middle;
-  color: $color2;
-
-  @include respond-to (break4) {
-    font-size: 14px;
-    line-height: 16px;
-  }
-;
-
-  &--divider {
-    margin-right: 10px;
-
-    font-weight: 700;
-  }
-
-  &--right {
-    margin-left: auto;
-  }
-
-  &--wrap {
-    width: 100%;
-  }
-}
-
-.menu__item--active {
-  font-weight: 700;
-
-  & a {
-    color: $color7;
-  }
-}
-
-// Search
-// =========================================================================
-
-.search-highlight {
-  animation: shake 1s 0.5s ease-in-out forwards;
-
-  &.person {
-    box-shadow: 5px 5px 15px 0 rgba($color7, 0.8),
-    -5px -5px 15px 0 rgba($color7, 0.8);
-  }
-
-  &.department {
-    color: $color7;
-  }
-}
-
-.search__form {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 200px;
-  padding-bottom: 10px;
-  padding-left: 6px;
-
-  &:hover,
-  &:focus-within {
-    border-left-color: $color6;
-  }
-}
-
-.search__input {
-  width: 200px;
-  padding-left: 5px;
-
-  color: $color1;
-
-  border: 1px solid $color9;
-  border-radius: 3px;
-
-  &::placeholder {
-    color: $color4;
-  }
-
-  &:-ms-input-placeholder {
-    padding-left: 5px;
-
-    color: $color4;
-  }
-
-  &:focus {
-    outline: 1px dashed $color6;
-  }
-}
-
-// Main
-// =========================================================================
-
-// Aside
-// =========================================================================
-
-.aside {
-  position: fixed;
-  top: 10px;
-
-  width: 200px;
-  height: 100%;
-  margin-right: 20px;
-  overflow: auto;
-
-  @include respond-to (break4) {
-    width: 450px;
-  }
-;
-}
-
-// Departments list
-// =========================================================================
-
-.departments {
-  margin-top: 20px;
-}
-
-.departments__title {
-  margin: 0;
-  margin-bottom: 20px;
-  padding: 0;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.departments__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-
-  list-style: none;
-}
-
-.departments__item {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-
-  border-left: 4px solid $color8;
-
-  transition: all 0.3s linear;
-
-  @include respond-to (break4) {
-    font-size: 14px;
-    line-height: 16px;
-  }
-;
-
-  &:hover,
-  &:focus {
-    border-left-color: $color10;
-  }
-
-  & a {
-    display: block;
-    padding: 5px;
-    padding-left: 6px;
-
-    border-bottom: none;
-  }
-}
-
-.departments__item--active {
-  border-left: 4px solid $color7;
-
-  & a {
-    color: $color7;
-
-    border-bottom: none;
-  }
-}
-
-// Employees
-// =========================================================================
-
-.employees {
-  display: flex;
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-wrap: wrap;
-  margin-left: 230px;
-
-  transition: margin-right 1s linear;
-
-  @include respond-to (break4) {
-    margin-left: 460px;
-  }
-;
-
-  &--shrinked {
-    margin-right: 230px;
-  }
-}
-
-.employees__title {
-  width: 100%;
-  margin: 0;
-  margin-bottom: 40px;
-  padding: 0;
-
-  text-align: center;
-  text-shadow: 2px 2px 4px rgba($color1, 0.5);
-}
-
-.department {
-  width: 100%;
-  margin: 0;
-  margin-bottom: 20px;
-  padding: 0;
-  padding-top: 10px;
-
-  text-shadow: 2px 2px 4px rgba($color1, 0.5);
-
-  &:focus {
-    outline: none;
-  }
-}
-
-.employees__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0;
-  margin-bottom: 30px;
-  padding: 0;
-
-  list-style: none;
-}
-
-// Person card
-// =========================================================================
-
-.person {
-  width: 210px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  overflow: hidden;
-
-  background-color: $color3;
-  border-width: 1px;
-  border-style: solid;
-  border-color: $color2;
-  border-radius: 5px;
-  box-shadow: 5px 5px 15px 0 rgba($color5, 0.5);
-
-  transition: all 0.3s ease-in-out;
-
-  &--popup {
-    margin: 0;
-
-    background-color: $color4;
-    box-shadow: none;
-  }
-
-  &--highlight {
-    background-color: desaturate($color8, 70%);
-  }
-
-  &:hover:not(.person--popup) {
-    background-color: $color4;
-  }
-
-  &:hover:not(.person--popup) .person__photo {
-    transform: scale(1.1);
-  }
-}
-
-.person__link {
-  display: block;
-  width: 190px;
-  height: 253px;
-  margin: 0;
-  margin-top: 8px;
-  margin-left: 8px;
-  padding: 0;
-  overflow: hidden;
-
-  border-width: 2px;
-  border-style: solid;
-  border-color: $color2;
-  border-radius: 5px;
-}
-
-.person__photo {
-  width: 100%;
-  height: 100%;
-
-  transition: all 0.3s ease-in-out;
-}
-
-.person__info {
-  display: flex;
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: calc(100% - 253px);
-  margin: 0;
-  padding: 5px;
-  position: relative;
-
-  &::before {
-    //content: "";
-    //ney year santa hat
-    position: absolute;
-    top: 3px;
-    left: 0;
-    display: block;
-    width: 20px;
-    height: 20px;
-    background-image: url("../img/santa-hat.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    transform: rotate(30deg);
-  }
-}
-
-.person__surname {
-  width: 100%;
-  margin-top: 10px;
-
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 22px;
-  color: $color2;
-}
-
-.person__name {
-  width: 100%;
-  margin-bottom: 5px;
-
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  color: $color2;
-  word-spacing: 100px;
-}
-
-.person__post {
-  width: 100%;
-  margin-bottom: 10px;
-
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  color: $color7;
-
-  &::before {
-    content: "";
-
-    display: inline-block;
-    width: 25px;
-    height: 20px;
-
-    background-image: url("../img/person__post.png");
-    background-repeat: no-repeat;
-    background-position: 0 2px;
-  }
-
-  &--subordinate {
-    min-height: auto;
-    margin-bottom: 5px;
-    padding: 0;
-
-    font-size: 10px;
-    line-height: 12px;
-  }
-}
-
-.person__info-line {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 100%;
-  margin-bottom: 10px;
-  overflow: hidden;
-
-  font-size: 12px;
-  line-height: 14px;
-  color: $color1;
-
-  &--bottom {
-    margin-top: auto;
-  }
-}
-
-.person__caption {
-  font-size: 10px;
-  line-height: 14px;
-}
-
-.person__email,
-.person__place,
-.person__internal,
-.person__external,
-.person__mobile {
-  position: relative;
-
-  padding-left: 20px;
-
-  font-size: 12px;
-  line-height: 14px;
-
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 14px;
-    height: 14px;
-
-    background-repeat: no-repeat;
-  }
-}
-
-.person__caption--email,
-.person__email {
-  color: $color9;
-}
-
-.person__email {
-  font-size: 10px;
-}
-
-.person__email::before {
-  background-image: url("../img/person__email.png");
-}
-
-.person__caption--place,
-.person__place {
-  color: $color5;
-}
-
-.person__place::before {
-  background-image: url("../img/person__place.png");
-}
-
-.person__caption--internal,
-.person__internal {
-  font-weight: 700;
-  color: $color7;
-}
-
-.person__internal--subordinate {
-  align-self: flex-end;
-  margin-bottom: 5px;
-
-  font-size: 12px;
-  line-height: 14px;
-}
-
-.person__internal::before {
-  background-image: url("../img/person__internal.png");
-}
-
-.person__caption--external,
-.person__external {
-  color: $color10;
-}
-
-.person__external::before {
-  background-image: url("../img/person__external.png");
-}
-
-.person__caption--mobile,
-.person__mobile {
-  color: $color11;
-}
-
-.person__mobile::before {
-  background-image: url("../img/person__mobile.png");
-}
-
-.person__subordinate,
-.person__manager {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  margin: 0;
-  padding: 0;
-  padding: 5px;
-
-  border-top: 1px dashed $color1;
-}
-
-.person__sub-title,
-.person__man-title {
-  margin: 0;
-  margin-bottom: 10px;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 18px;
-  color: $color1;
-}
-
-.person__sub-list {
-  margin: 0;
-  margin-left: 5px;
-  padding: 0;
-
-  list-style: none;
-}
-
-.person__sub-item {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  margin-right: 5px;
-  margin-bottom: 5px;
-
-  border-bottom: 1px dashed $color1;
-}
-
-.person__sub-name,
-.person__man-name {
-  margin-bottom: 5px;
-
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 14px;
-}
-
-// Popup
-// =========================================================================
-
-.popup {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-
-  width: 230px;
-  height: calc(100vh - 10px);
-  margin-top: 10px;
-  overflow: auto;
-}
-
-.popup--in {
-  animation: popupSlideIn 0.3s 0.5s ease-in-out forwards;
-}
-
-.popup--out {
-  animation: popupSlideOut 0.3s 0.5s ease-in-out forwards;
-}
-
-.popup-close {
-  position: absolute;
-  top: 5px;
-  left: 5px;
-
-  width: 210px;
-  height: 40px;
-  padding: 0;
-
-  background-color: transparent;
-  background-image: url("../img/popup-close.png");
-  background-repeat: no-repeat;
-  background-position: left;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-
-  transition: background-position 0.3s ease-in-out;
-
-  &:focus {
-    outline: none;
-  }
-
-  &:hover,
-  &:focus {
-    background-position: 90%;
-  }
-}
+// Common
+@import "../../node_modules/normalize-scss/sass/_normalize.scss";
+@include normalize();
+@import "fonts";
+@import "variables";
+@import "mixins";
+@import "animations";
+@import "scaffolding";
+
+// Blocks
+@import "blocks/container";
+@import "blocks/body";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/search";
+@import "blocks/aside";
+@import "blocks/departments";
+@import "blocks/employees";
+@import "blocks/department";
+@import "blocks/person";
+@import "blocks/popup";
